第一天的代码看完了

--- a/JSAdvance/prepare/01_基础总结深入/02_数据_变量_内存4.html
+++ b/JSAdvance/prepare/01_基础总结深入/02_数据_变量_内存4.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>02_关于数据传递问题</title>
 </head>
+
 <body>
-<!--
+  <!--
 问题: 在js调用函数时传递变量参数时, 是值传递还是引用传递
   * 只有值传递, 没有引用传递, 传递的都是变量的值, 只是这个值可能是基本数据, 也可能是地址(引用)数据
-  * 如果后一种看成是引用传递, 那就值传递和引用传递都可以有
+  * 如果后一种看成是引用传递, 那就值传递和引用传递都可以有  但是这个一般是怎么传  如果传引用的数据类型的话 不同样代表着可以引用传递了
 -->
-<script type="text/javascript">
-  function f(a) {
-    console.log(a)
-  }
-  var n = 4
-  f(n) //传递的是n的值 --->值传递
+  <script type="text/javascript">
+    function f(a) {
+      console.log(a)
+    }
+    var n = 4
+    f(n) //传递的是n的值 --->值传递
 
-  function f2(a) {
-    a.name = 'atguigu'
-  }
-  n = {}
-  f2(n) // 传递的是n指向的对象 ---> 引用传递   ???
-  console.log(n.name)
-</script>
+    function f2(a) {
+      a.name = 'atguigu'
+    }
+    n = {}
+    f2(n) // 传递的是n指向的对象 ---> 引用传递   ???
+    console.log(n.name)
+
+    console.log("---------------------------------------")
+
+    var ck = {
+      name: 'ck',
+      age: 18
+    }
+
+    console.log(ck);
+    console.log("!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
+    
+
+  //是顺序执行的啊
+
+
+    function ack(a){
+      a.name = 'ck2'
+    }
+
+    ack(ck);
+
+    console.log(ck)
+
+
+
+
+  </script>
 </body>
+
 </html>
