JS高级部分 初步刷了一遍

--- a/JSAdvance/prepare/02_函数高级/04_闭包/05_闭包的应用_自定义JS模块.html
+++ b/JSAdvance/prepare/02_函数高级/04_闭包/05_闭包的应用_自定义JS模块.html
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="05_coolModule.js"></script>
 <script type="text/javascript">
   var module = coolModule()
-  module.doSomething()
+  module.doSomething()       //这个是不是就是比较像npm中的那个require
   module.doOtherthing()
 </script>
 </body>
