--- a/JSAdvance/prepare/03_对象高级/01_对象创建模式/04_自定义构造函数模式.html
+++ b/JSAdvance/prepare/03_对象高级/01_对象创建模式/04_自定义构造函数模式.html
@@ -11,6 +11,7 @@
   * 套路: 自定义构造函数, 通过new创建对象
   * 适用场景: 需要创建多个类型确定的对象
   * 问题: 每个对象都有相同的数据, 浪费内存
+  * 这个跟工厂函数有区别么  都同样的创建对象 而且每个对象也有同样的数据
 -->
 <script type="text/javascript">
 
