--- a/JSAdvance/prepare/03_对象高级/02_继承模式/01_原型链继承.html
+++ b/JSAdvance/prepare/03_对象高级/02_继承模式/01_原型链继承.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!--
-方式1: 原型链继承
+方式1: 原型链继承   这个有啥用啊
   1. 套路
     1. 定义父类型构造函数
     2. 给父类型的原型添加方法
@@ -44,9 +44,9 @@
   // 创建子类型的实例
   var sub = new Sub()
   // 调用父类型的方法
-  sub.showSubProp()
+  sub.showSubProp()       //The sub prop
   // 调用子类型的方法
-  sub.showSupperProp()
+  sub.showSupperProp()    //The super prop
 </script>
 </body>
 </html>
