--- a/JSAdvance/prepare/03_对象高级/02_继承模式/02_借用构造函数继承.html
+++ b/JSAdvance/prepare/03_对象高级/02_继承模式/02_借用构造函数继承.html
@@ -22,7 +22,7 @@
   }
 
   function Student(name, age, price) {
-    Person.call(this, name, age)   // this.Person(name, age)
+    Person.call(this, name, age)   // this.Person(name, age)     实际上这个this应该指的就是Student对象
     this.price = price
   }
 
