--- a/JSAdvance/prepare/04_线程机制与事件机制/01_进程与线程.html
+++ b/JSAdvance/prepare/04_线程机制与事件机制/01_进程与线程.html
@@ -12,7 +12,7 @@
   * 一个进程中一般至少有一个运行的线程: 主线程
   * 一个进程中也可以同时运行多个线程, 我们会说程序是多线程运行的
   * 一个进程内的数据可以供其中的多个线程直接共享
-  * 多个进程之间的数据是不能直接共享的
+  * 多个进程之间的数据是不能直接共享的   因为进程之前的内存空间是独立的
 4. 浏览器运行是单进程还是多进程?
   * 有的是单进程
     * firefox
@@ -23,7 +23,7 @@
 5. 如何查看浏览器是否是多进程运行的呢?
   * 任务管理器==>进程
 6. 浏览器运行是单线程还是多线程?
-  * 都是多线程运行的
+  * 都是多线程运行的     上面不是还在说有些浏览器运行比如说是老版本的IE是单进程的
 -->
 </body>
 </html>
