--- a/JSAdvance/prepare/04_线程机制与事件机制/02_浏览器内核.html
+++ b/JSAdvance/prepare/04_线程机制与事件机制/02_浏览器内核.html
@@ -13,10 +13,9 @@
   * firefox: Gecko
   * IE: Trident
   * 360,搜狗等国内浏览器: Trident + webkit
-3. 内核由很多模块组成
+3. 内核由很多模块组成   是不是和单一职责的设计模式比较像 每一个都有一个独立的功能模块进行负责
   * html,css文档解析模块 : 负责页面文本的解析
   * dom/css模块 : 负责dom/css在内存中的相关处理
-  * 布局和渲染模块 : 负责页面的布局和效果的绘制
   * 布局和渲染模块 : 负责页面的布局和效果的绘制
 
   * 定时器模块 : 负责定时器的管理
