--- a/JSAdvance/prepare/02_函数高级/03_作用域与作用域链/03_作用域链.html
+++ b/JSAdvance/prepare/02_函数高级/03_作用域与作用域链/03_作用域链.html
@@ -24,7 +24,7 @@
       console.log(c);
       console.log(b);
       console.log(a);
-      console.log(d);
+      // console.log(d);
     }
 
     fn2();
