--- a/JSAdvance/prepare/03_对象高级/01_对象创建模式/03_工厂模式.html
+++ b/JSAdvance/prepare/03_对象高级/01_对象创建模式/03_工厂模式.html
@@ -12,7 +12,7 @@
   * 问题: 对象没有一个具体的类型, 都是Object类型
 -->
 <script type="text/javascript">
-  // 工厂函数: 返回一个需要的数据的函数
+  // 工厂函数: 返回一个需要的数据的函数      这不是类似创建一个构造函数么
   function createPerson(name, age) {
     var p = {
       name: name,
